--- a/index.html
+++ b/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV</title>
-</head>
-<body>
+  </head>
+  <body>
+    <img src="photo.jpg" alt="My photo" width="150px" hight="150px">
     <h1>Katarzyna Russek</h1>
-</body>
+        <span>architect, graphic designer</span>
+        <p>
+            Mam na imię <b>Katarzyna</b>! Od 7 lat pracuję jako architekt i grafik w biurach
+            inżynierskich. W codziennej pracy lubię zdobywać nowye umiejętności i
+            staram się czerpać przyjemność z tego co robię. Właśnie zaczynam swoją przygodę z
+            Frontendem.
+        </p>
+    <h2>Doświadczenie zawodowe</h2>
+        <ul>
+            <li>2021 - obecnie: Green Cities Infrastructure - asystentka architekta</li>
+            <li>2016 - 2021: BPBK.SA - asystentka projektanta</li>
+        </ul>
+    <h2>Wykształcenie</h2>
+        <ul>
+            <li>2007 - 2012: <a href="https://asp.gda.pl/wydzialy/wydzial-grafiki,89">Akademia Sztuk Pięknych w Gdańsku</a> - Grafika</li>
+            <li>2010 - 2017: <a href="https://pg.edu.pl/">Politechnika Gdańska</a> - Architektura</li>
+        </ul>
+    <h2>Zainteresowania</h2>
+        <p>grafika artystyczna, urbanistyka, joga</p>
+    
+  </body>
 </html>
+ 
