Added style.css file and modified index.html

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CV</title>
+    <title>CV Katarzyna Russek</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <img src="photo.jpg" alt="My photo" width="150px" hight="150px">
+    <img src="photo.jpg" alt="My photo">
     <h1>Katarzyna Russek</h1>
         <span>architect, graphic designer</span>
         <p>
