Added semantic el. to index.html and modified css

--- a/index.html
+++ b/index.html
@@ -7,28 +7,54 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <img src="photo.jpg" alt="My photo">
-    <h1>Katarzyna Russek</h1>
+    <header>
+        <img src="photo.jpg" alt="My photo">
+        <h1>Katarzyna Russek</h1>
         <span>architect, graphic designer</span>
-        <p>
-            Mam na imię <b>Katarzyna</b>! Od 7 lat pracuję jako architekt i grafik w biurach
-            inżynierskich. W codziennej pracy lubię zdobywać nowye umiejętności i
-            staram się czerpać przyjemność z tego co robię. Właśnie zaczynam swoją przygodę z
-            Frontendem.
-        </p>
-    <h2>Doświadczenie zawodowe</h2>
-        <ul>
-            <li>2021 - obecnie: Green Cities Infrastructure - asystentka architekta</li>
-            <li>2016 - 2021: BPBK.SA - asystentka projektanta</li>
-        </ul>
-    <h2>Wykształcenie</h2>
-        <ul>
-            <li>2007 - 2012: <a href="https://asp.gda.pl/wydzialy/wydzial-grafiki,89">Akademia Sztuk Pięknych w Gdańsku</a> - Grafika</li>
-            <li>2010 - 2017: <a href="https://pg.edu.pl/">Politechnika Gdańska</a> - Architektura</li>
-        </ul>
-    <h2>Zainteresowania</h2>
-        <p>grafika artystyczna, urbanistyka, joga</p>
-    
+    </header>
+    <main>
+        <section>
+            <h2>O mnie</h2>
+            <p>
+                Mam na imię <b>Katarzyna</b>! Od 7 lat pracuję jako architekt i grafik w biurach
+                inżynierskich. W codziennej pracy lubię zdobywać nowe umiejętności i
+                staram się czerpać przyjemność z tego co robię. Właśnie zaczynam swoją przygodę z
+                Frontendem.
+            </p>
+        </section>
+        <section>
+            <h2>Doświadczenie zawodowe</h2>
+            <ul>
+                <li>2021 - obecnie: Green Cities Infrastructure - asystentka architekta</li>
+                <li>2016 - 2021: BPBK.SA - asystentka projektanta</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Języki</h2>
+            <ul>
+                <li>Angielski - B1</li>
+                <li>Francuski - A1</li>
+                <li>Polski - ojczysty</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Wykształcenie</h2>
+            <ul>
+                <li>2007 - 2012: <a href="https://asp.gda.pl/wydzialy/wydzial-grafiki,89">Akademia Sztuk Pięknych w Gdańsku</a> - Grafika</li>
+                <li>2010 - 2017: <a href="https://pg.edu.pl/">Politechnika Gdańska</a> - Architektura</li>
+            </ul>
+        </section>
+        <section>
+            <h2>Zainteresowania</h2>
+            <ul>
+                <li>grafika artystyczna</li>
+                <li>urbanistyka</li>
+                <li>joga</li>
+            </ul>
+        </section>
+    </main>
+
+
   </body>
 </html>
  
