Positioning elements part 1

--- a/index.html
+++ b/index.html
@@ -9,8 +9,18 @@
   <body>
     <header>
         <img src="photo.jpg" alt="My photo">
-        <h1>Katarzyna Russek</h1>
-        <span>architect, graphic designer</span>
+        <div>
+            <h1>Katarzyna Russek</h1>
+            <span>architect, graphic designer</span>
+        </div>
+        <address>
+            <ul>
+                <li><b>numer telefonu:</b> 123 456 789</li>
+                <li><b>e-mail:</b> fanfunkat@gmail.com</li>
+                <li><b>rok urodzenia:</b> 1987</li>
+                <li><b>miejsce zamieszkania:</b> Gdańsk</li>
+            </ul>
+        </address>
     </header>
     <main>
         <section>
