--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         </div>
         <address>
             <ul>
-                <li><b>numer telefonu:</b> 123 456 789</li>
-                <li><b>e-mail:</b> fanfunkat@gmail.com</li>
-                <li><b>rok urodzenia:</b> 1987</li>
-                <li><b>miejsce zamieszkania:</b> Gdańsk</li>
+                <li><img src="image/phone.png"><b>numer telefonu:</b> 123 456 789</li>
+                <li><img src="image/mail.png"><b>e-mail:</b> fanfunkat@gmail.com</li>
+                <li><img src="image/birthday-cake.png"><b>rok urodzenia:</b> 1987</li>
+                <li><img src="image/pin.png"><b>miejsce zamieszkania:</b> Gdańsk</li>
             </ul>
         </address>
     </header>
