--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   </head>
   <body>
     <header>
-        <img src="photo.jpg" alt="My photo">
+        <img class="circle" src="photo.jpg" alt="My photo">
         <div>
             <h1>Katarzyna Russek</h1>
             <span>architect, graphic designer</span>
         </div>
         <address>
             <ul>
-                <li><img src="image/phone.png"><b>numer telefonu:</b> 123 456 789</li>
-                <li><img src="image/mail.png"><b>e-mail:</b> fanfunkat@gmail.com</li>
-                <li><img src="image/birthday-cake.png"><b>rok urodzenia:</b> 1987</li>
-                <li><img src="image/pin.png"><b>miejsce zamieszkania:</b> Gdańsk</li>
+                <li><img class="address-icon circle" src="image/phone.png"><b>numer telefonu:</b> 123 456 789</li>
+                <li><img class="address-icon circle" src="image/mail.png"><b>e-mail:</b> fanfunkat@gmail.com</li>
+                <li><img class="address-icon circle" src="image/birthday-cake.png"><b>rok urodzenia:</b> 1987</li>
+                <li><img class="address-icon circle" src="image/pin.png"><b>miejsce zamieszkania:</b> Gdańsk</li>
             </ul>
         </address>
     </header>
