Positioning elements part 2

--- a/index.html
+++ b/index.html
@@ -4,67 +4,124 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV Katarzyna Russek</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-        <img class="circle" src="photo.jpg" alt="My photo">
-        <div>
-            <h1>Katarzyna Russek</h1>
-            <span>architect, graphic designer</span>
-        </div>
-        <address>
-            <ul>
-                <li><img class="address-icon circle" src="image/phone.png"><b>numer telefonu:</b> 123 456 789</li>
-                <li><img class="address-icon circle" src="image/mail.png"><b>e-mail:</b> fanfunkat@gmail.com</li>
-                <li><img class="address-icon circle" src="image/birthday-cake.png"><b>rok urodzenia:</b> 1987</li>
-                <li><img class="address-icon circle" src="image/pin.png"><b>miejsce zamieszkania:</b> Gdańsk</li>
-            </ul>
-        </address>
+      <img class="circle profile-picture" src="photo.jpg" alt="My photo" />
+      <div>
+        <h1>Katarzyna Russek</h1>
+        <span>architect, graphic designer</span>
+      </div>
+      <address>
+        <ul>
+          <li>
+            <img class="address-icon circle" src="image/phone.png" /><b>numer telefonu:</b> <a href="tel:123456789">123 456 789</a>
+          </li>
+          <li>
+            <img class="address-icon circle" src="image/mail.png" /><b>e-mail:</b> <a href="mailto:fanfunkat@gmail.com">fanfunkat@gmail.com</a>
+          </li>
+          <li>
+            <img class="address-icon circle" src="image/birthday-cake.png" /><b>rok urodzenia:</b> 1987
+          </li>
+          <li>
+            <img class="address-icon circle" src="image/pin.png" /><b>miejsce zamieszkania:</b> Gdańsk
+          </li>
+        </ul>
+      </address>
     </header>
     <main>
-        <section>
-            <h2>O mnie</h2>
-            <p>
-                Mam na imię <b>Katarzyna</b>! Od 7 lat pracuję jako architekt i grafik w biurach
-                inżynierskich. W codziennej pracy lubię zdobywać nowe umiejętności i
-                staram się czerpać przyjemność z tego co robię. Właśnie zaczynam swoją przygodę z
-                Frontendem.
-            </p>
-        </section>
-        <section>
-            <h2>Doświadczenie zawodowe</h2>
-            <ul>
-                <li>2021 - obecnie: Green Cities Infrastructure - asystentka architekta</li>
-                <li>2016 - 2021: BPBK.SA - asystentka projektanta</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Języki</h2>
-            <ul>
-                <li>Angielski - B1</li>
-                <li>Francuski - A1</li>
-                <li>Polski - ojczysty</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Wykształcenie</h2>
-            <ul>
-                <li>2007 - 2012: <a href="https://asp.gda.pl/wydzialy/wydzial-grafiki,89">Akademia Sztuk Pięknych w Gdańsku</a> - Grafika</li>
-                <li>2010 - 2017: <a href="https://pg.edu.pl/">Politechnika Gdańska</a> - Architektura</li>
-            </ul>
-        </section>
-        <section>
-            <h2>Zainteresowania</h2>
-            <ul>
-                <li>grafika artystyczna</li>
-                <li>urbanistyka</li>
-                <li>joga</li>
-            </ul>
-        </section>
+      <section>
+        <h2>O mnie</h2>
+        <p>
+          Mam na imię <b>Katarzyna</b>! Od 7 lat pracuję jako architekt i grafik
+          w biurach inżynierskich. W codziennej pracy lubię zdobywać nowe
+          umiejętności i staram się czerpać przyjemność z tego co robię. Właśnie
+          zaczynam swoją przygodę z Frontendem.
+        </p>
+      </section>
+      <section>
+        <h2>Doświadczenie zawodowe</h2>
+        <ul>
+          <li>2021 - obecnie: Green Cities Infrastructure - asystentka architekta</li>
+          <li>2016 - 2021: BPBK.SA - asystentka projektanta</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Języki</h2>
+        <ul>
+          <li>Angielski - B1</li>
+          <li>Francuski - A1</li>
+          <li>Polski - ojczysty</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Wykształcenie</h2>
+        <ul>
+          <li>
+            2010 - 2017: <a href="https://pg.edu.pl/">Politechnika Gdańska</a> - Architektura
+          </li>
+          <li>
+            2007 - 2012: <a href="https://asp.gda.pl/wydzialy/wydzial-grafiki,89">Akademia Sztuk Pięknych w Gdańsku</a> - Grafika
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Zainteresowania</h2>
+        <ul class="hobbies">
+          <li>
+            <img src="image/art.png" alt="art palet" />
+            <div>
+                <h3>grafika artystyczna</h3>
+                <p>
+                  Od zawsze lubiłam rysować i malować, techniki grafiki warsztatowej
+                  poznałam dopiero na studiach i zakochałam się w druku wypukłym.
+                  Podziwiam dzieła japońskich mistrzów epoki Edo, ale lubię też oglądać
+                  wystawy poświęcone współczesnej grafice.
+                </p>
+            </div>
+          </li>
+          <li>
+            <img src="image/city.png" alt="buildings" />
+            <div>
+                <h3>urbanistyka</h3>
+                <p>
+                  Co sprawia, że miasto jest dobre albo niedobre do życia?
+                  Trudno znaleźć jedną odpowiedź na to pytanie. Miasto to żywy
+                  organizm, a jego mieszkańcy mają różne potrzeby. Studiowanie
+                  budowy, rozwoju, funkcjonowania miast
+                  to fascynujący temat z wielona zwrotami akcji.
+                </p>
+            </div>
+          </li>
+          <li>
+            <img src="image/ball.png" alt="ball" />
+            <div>
+                <h3>joga</h3>
+                <p>
+                  Praktykuję jogę od 2 lat, a od ponad roku Ashtangę Viniasę Jogę.
+                  Moja przygoda z jogą zaczeła się od bólu pleców spowodowanym
+                  siedzeniem przed komputerem przez większość dnia. Teraz joga jest
+                  dla mnie przestrzenią relaksu, wyciszenia, chwilą skupenia i pracy
+                  nad sobą.
+                </p>
+            </div>
+          </li>
+          <li>
+            <img src="image/compass.png" alt="kompas" />
+            <div>
+                <h3>treking górski</h3>
+                <p>
+                  Góry to wolność, wysiek nagrodzony satysfakcją, widokami <br>i
+                  przeżyciami. Planowanie wypraw ze znajomymi i realizacja
+                  tych planów to najlepszy wypoczynek. Do moich ulubionych pasm
+                  górskich należą Tatry Niżne oraz Mała i Wielka Fatra na Słowacji.
+                  W Polsce upodobałam siobie całe Sudety.
+                </p>
+            </div>
+          </li>
+        </ul>
+      </section>
     </main>
-
-
   </body>
 </html>
- 
