Added new icons and colors

--- a/index.html
+++ b/index.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+    <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>CV Katarzyna Russek</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+    </head>
+    <body>
         <div class="container">
             <header>
-                <img class="circle profile-picture" src="photo.jpg" alt="My photo" />
+                <img class="circle profile-picture" src="photo2.png" alt="My photo" />
                 <div>
                     <h1>Katarzyna Russek</h1>
-                    <span>architect, graphic designer</span>
+                    <span>architekt, grafik</span>
                     <div>
-                        <a class="cv-download-link" href="https://store3.gofile.io/download/6907948a-8450-4ec0-a53d-16e0c972e48c/CV-kat-rus.pdf">Pobierz CV</a>
+                        <a class="cv-download-link" href="https://store9.gofile.io/download/14ca9765-6492-4fe4-8bb3-778c05a7c6b1/CV-kat-rus.pdf">Pobierz CV</a>
                     </div>
                 </div>
                 <address>
                     <ul>
-                    <li>
-                        <img class="address-icon circle" src="image/phone.png" /><b>numer telefonu:</b> <a href="tel:123456789">123 456 789</a>
-                    </li>
-                    <li>
-                        <img class="address-icon circle" src="image/mail.png" /><b>e-mail:</b> <a href="mailto:fanfunkat@gmail.com">fanfunkat@gmail.com</a>
-                    </li>
-                    <li>
-                        <img class="address-icon circle" src="image/birthday-cake.png" /><b>rok urodzenia:</b> 1987
-                    </li>
-                    <li>
-                        <img class="address-icon circle" src="image/pin.png" /><b>miejsce zamieszkania:</b> Gdańsk
-                    </li>
+                        <li>
+                            <img class="address-icon" src="imsvg/envelope.svg" /><a href="mailto:fanfunkat@gmail.com">fanfunkat@gmail.com</a>
+                        </li>
+                        <li>
+                            <img class="address-icon" src="imsvg/linkedin.svg" alt="linkedin"/><a href="https://www.linkedin.com/in/kat-rus/">linkedin.com/in/kat-rus</a>
+                        </li>
+                        <li>
+                            <img class="address-icon" src="imsvg/behance.svg" alt="behance"/> <a href="https://www.behance.net/kat-rus">behance.net/kat-rus</a>
+                        </li>
                     </ul>
                 </address>
             </header>
@@ -38,97 +38,121 @@
                 <section>
                     <h2>O mnie</h2>
                     <p>
-                    Mam na imię <b>Katarzyna</b>! Od 7 lat pracuję jako architekt i grafik
-                    w biurach inżynierskich. W codziennej pracy lubię zdobywać nowe
-                    umiejętności i staram się czerpać przyjemność z tego co robię. Właśnie
-                    zaczynam swoją przygodę z Frontendem.
+                    Mam na imię <b>Katarzyna</b>! Od 7 lat pracuję jako architekt i grafik w biurach inżynierskich.
+                    W codziennej pracy staram się czerpać przyjemność z tego co robię,
+                    lubię zdobywać nowe umiejętności i wykorzystywać je w swojej pracy.
+                    Właśnie zaczynam swoją przygodę z Frontendem!
                     </p>
                 </section>
                 <section>
                     <h2>Doświadczenie zawodowe</h2>
                     <ul>
-                    <li>2021 - obecnie: <a href="https://www.greencities.pl/">Green Cities Infrastructure</a> - asystentka architekta</li>
-                    <li>2016 - 2021: BPBK.SA - asystentka projektanta</li>
-                    <li>2015: Transforma Grzegorz Pęczek - współpraca jako urbanistka i grafik</li>
-                    <li>2014 - 2017: Nemipictures Polskie Studio Filmowe Sp. z o. o. | Enliven Art Sp. z o. o. - współpraca jako grafik</li>
+                        <li>2021 - obecnie <br><h3><a href="https://www.greencities.pl/">Green Cities Infrastructure Sp. z o. o.</a> - Asystentka Architekta</h3></li>
+                        <p>
+                            Wykonywanie projektów koncepcyjnych, budowlanych, technicznych,
+                            wykonawczych oraz projektów wnętrz. Przygotowanie programów
+                            funkcjonalno użytkowych (PFU). Koordynacja branż. Opracowania graficzne
+                            do analiz wykonalności, strategii rozwoju miast. Identyfikacja firmy.
+                        </p>
+                        <li>2016 - 2021 <br><h3>BPBK.SA - Asystentka Projektanta</h3></li>
+                        <p>
+                            Wykonywanie projektów koncepcyjnych, opracowywanie projektów budowlanych
+                            i wykonawczych. Koordynacja branż, pozyskiwanie uzgodnień, wykonywanie
+                            makiet projektów urbanistycznych.
+                        </p>
+                        <li>2015 <br><h3>Transforma Grzegorz Pęczek - Urbanistka i Grafik</h3></li>
+                        <p>
+                            Współpraca przy koncepcjach zagospodarowania parków. Wykonywanie
+                            analiz urbanistycznych i opracowań graficznych do koncepcji przestrzennej dla
+                            kierunków zmian w strukturze funkcjonalno-przestrzennej miasta.
+                        </p>
+                        <li>2014 - 2017 <br><h3>Nemipictures Polskie Studio Filmowe Sp. z o. o. <br>Enliven Art Sp. z o. o. - Grafik</h3></li>
+                        <p>
+                            Współpraca przy animacji obrazów i pełnometrażowym filmie animowanym „Pojednanie”.
+                        </p>
                     </ul>
                 </section>
-                <section>
-                    <h2>Języki</h2>
-                    <ul>
-                    <li>Angielski - B1</li>
-                    <li>Francuski - A1</li>
-                    <li>Polski - ojczysty</li>
-                    </ul>
-                </section>
-                <section>
-                    <h2>Wykształcenie</h2>
-                    <ul>
-                    <li>
-                        2010 - 2017: <a href="https://pg.edu.pl/">Politechnika Gdańska</a> - Architektura
-                    </li>
-                    <li>
-                        2007 - 2012: <a href="https://asp.gda.pl/wydzialy/wydzial-grafiki,89">Akademia Sztuk Pięknych w Gdańsku</a> - Grafika
-                    </li>
-                    </ul>
-                </section>
+                <div class="edu-language">
+                    <section>
+                        <h2>Języki</h2>
+                        <ul>
+                            <li>Angielski - B1</li>
+                            <li>Francuski - A1/A2</li>
+                            <li>Polski - ojczysty</li>
+                        </ul>
+                    </section>
+                    <section>
+                        <h2>Wykształcenie</h2>
+                        <ul>
+                            <li>
+                                2015 - 2017: <a href="https://pg.edu.pl/">Politechnika Gdańska</a> - Architektura, studia II-go stopnia
+                            </li>
+                            <li>
+                                2010 - 2014: <a href="https://pg.edu.pl/">Politechnika Gdańska</a> - Architektura i Urbanistyka, studia I-go stopnia
+                            </li>
+                            <li>
+                                2007 - 2012: <a href="https://asp.gda.pl/wydzialy/wydzial-grafiki,89">Akademia Sztuk Pięknych w Gdańsku</a> - Grafika
+                            </li>
+                        </ul>
+                    </section>
+                </div>
                 <section>
                     <h2>Zainteresowania</h2>
                     <ul class="hobbies">
-                    <li>
-                        <img src="image/art.png" alt="art palet" />
-                        <div>
-                            <h3>grafika artystyczna</h3>
-                            <p>
-                            Od zawsze lubiłam rysować i malować, techniki grafiki warsztatowej
-                            poznałam dopiero na studiach i zakochałam się w druku wypukłym.
-                            Podziwiam dzieła japońskich mistrzów epoki Edo, ale lubię też oglądać
-                            wystawy poświęcone współczesnej grafice.
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="image/city.png" alt="buildings" />
-                        <div>
-                            <h3>urbanistyka</h3>
-                            <p>
-                            Co sprawia, że miasto jest dobre albo niedobre do życia?
-                            Trudno znaleźć jedną odpowiedź na to pytanie. Miasto to żywy
-                            organizm, a jego mieszkańcy mają różne potrzeby. Studiowanie
-                            budowy, rozwoju, funkcjonowania miast
-                            to fascynujący temat z wielona zwrotami akcji.
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="image/ball.png" alt="ball" />
-                        <div>
-                            <h3>joga</h3>
-                            <p>
-                            Praktykuję jogę od 2 lat, a od ponad roku Ashtangę Viniasę Jogę.
-                            Moja przygoda z jogą zaczeła się od bólu pleców spowodowanym
-                            siedzeniem przed komputerem przez większość dnia. Teraz joga jest
-                            dla mnie przestrzenią relaksu, wyciszenia, chwilą skupenia i pracy
-                            nad sobą.
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="image/compass.png" alt="kompas" />
-                        <div>
-                            <h3>treking górski</h3>
-                            <p>
-                            Góry to wolność, wysiek nagrodzony satysfakcją, widokami <br>i
-                            przeżyciami. Planowanie wypraw ze znajomymi i realizacja
-                            tych planów to najlepszy wypoczynek. Do moich ulubionych pasm
-                            górskich należą Tatry Niżne oraz Mała i Wielka Fatra na Słowacji.
-                            W Polsce upodobałam siobie całe Sudety.
-                            </p>
-                        </div>
-                    </li>
+                        <li>
+                            <img class="hobbies-icon" src="imsvg/palet.svg" alt="art palet" />
+                            <div>
+                                <h3>grafika artystyczna</h3>
+                                <p>
+                                Od zawsze lubiłam rysować i malować, techniki grafiki warsztatowej
+                                poznałam dopiero na studiach i zakochałam się w druku wypukłym.
+                                Podziwiam dzieła japońskich mistrzów epoki Edo, ale lubię też oglądać
+                                wystawy poświęcone współczesnej grafice.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <img class="hobbies-icon" src="imsvg/city.svg" alt="city buildings" />
+                            <div>
+                                <h3>urbanistyka</h3>
+                                <p>
+                                Co sprawia, że miasto jest dobre albo niedobre do życia?
+                                Trudno znaleźć jedną odpowiedź na to pytanie. Miasto to żywy
+                                organizm, a jego mieszkańcy mają różne potrzeby. Studiowanie
+                                budowy, rozwoju, funkcjonowania miast
+                                to fascynujący temat z wielona zwrotami akcji.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <img class="hobbies-icon" src="imsvg/joga.svg" alt="lotus flower" />
+                            <div>
+                                <h3>joga</h3>
+                                <p>
+                                Praktykuję jogę od 2 lat, a od ponad roku Ashtangę Viniasę Jogę.
+                                Moja przygoda z jogą zaczeła się od bólu pleców spowodowanym
+                                siedzeniem przed komputerem przez większość dnia. Teraz joga jest
+                                dla mnie przestrzenią relaksu, wyciszenia, chwilą skupenia i pracy
+                                nad sobą.
+                                </p>
+                            </div>
+                        </li>
+                        <li>
+                            <img class="hobbies-icon" src="imsvg/treck.svg" alt="person hiking" />
+                            <div>
+                                <h3>treking górski</h3>
+                                <p>
+                                Góry to wolność, wysiek nagrodzony satysfakcją, widokami i
+                                przeżyciami. Planowanie wypraw ze znajomymi i realizacja
+                                tych planów to najlepszy wypoczynek. Do moich ulubionych pasm
+                                górskich należą Tatry Niżne oraz Mała i Wielka Fatra na Słowacji.
+                                W Polsce upodobałam siobie całe Sudety.
+                                </p>
+                            </div>
+                        </li>
                     </ul>
                 </section>
             </main>
         </div>
-  </body>
+    </body>
 </html>
